ppt -> pdf Wolves

--- a/_posts/2019-06-07-wolves.md
+++ b/_posts/2019-06-07-wolves.md
@@ -1,7 +1,7 @@
 ---
 title: 'Should Wolves be re-introduced to Scotland?'
 date: 2018-11-13T13:34
-author: Nick Hood
+author: Isobel Turley
 layout: post
 permalink: /2019/06/07/wolves/
 image: /files/2019/06/wolf.png
@@ -21,4 +21,4 @@ This is a project that examines the question of "rewilding", specifically, wheth
 **Outdoor Learning** – including a trip to the Highland Wildlife Park would add enormous value to this unit of lessons as the students could see real-life wolves and deer. This would greatly enhance the relevance of the unit as they can see the stages of food chains and begin to understand the ecosystems and habitats that Scottish wolves would have lived in. 
 
 
-<div class="wp-block-file"><a href="/files/2019/06/Wolves.pptx">Wolves Poster (Powerpoint file)</a> <a href="/files/2019/06/Wolves.pptx" class="btn btn-sm btn-default" download>Download</a></div>
+<div class="wp-block-file"><a href="/files/2019/06/Wolves.pdf">Wolves Poster (PDF)</a> <a href="/files/2019/06/Wolves.pdf" class="btn btn-sm btn-default" download>Download</a></div>
