Added creator css and field for posts

--- a/_posts/2019-06-07-wolves.md
+++ b/_posts/2019-06-07-wolves.md
@@ -1,7 +1,8 @@
 ---
 title: 'Should Wolves be re-introduced to Scotland?'
 date: 2018-11-13T13:34
-author: Isobel Turley
+author: Nick Hood
+creator: Isobel Turley
 layout: post
 permalink: /2019/06/07/wolves/
 image: /files/2019/06/wolf.png
