--- a/_posts/2019-11-14-outdoors.md
+++ b/_posts/2019-11-14-outdoors.md
@@ -22,4 +22,6 @@ This poster proposes a range of lessons related to the outdoors and the relation
 * Effects of humans on the environment
 * Camping equipment design and adapting to the environment
 
+*Featured image original photo © Nick Hood 2019*
+
 <a href="/files/2019/11/outdoors.pdf">Outdoors presentation (pdf)</a> <a href="/files/2019/11/outdoors.pdf" class="btn btn-sm btn-default" download>Download</a>
